fixed following aXe issues: color contrast; ul/li format issues

--- a/main.css
+++ b/main.css
@@ -31,6 +31,14 @@ button {
     color: white;
 }
 
+a:visited {
+    color: white;
+}
+
+a {
+    color: yellow;
+}
+
 ul {
    list-style-type: none; 
 }
